simple solution but took me ages, fixed so the images do not hack when loaded after changing filters on gallery. Previously, the images would load laggy, now, they only load once the products have been rendered & then turn visible after 1 second

--- a/src/UI/UIComponents/BODY/gallery/GALLERY.module.scss
+++ b/src/UI/UIComponents/BODY/gallery/GALLERY.module.scss
@@ -1,6 +1,7 @@
 // Gallery
 .gallery {
-  min-height: 92vh;
+  padding-top: 50px;
+  min-height: 100vh;
 
   display: flex;
   flex-direction: column;
@@ -20,6 +21,17 @@
   // productsWrapper
   .productsWrapper {
     width: 70%;
+    display: grid;
+
+    .productsLoading {
+      grid-column: 1;
+      grid-row: 1;
+    }
+
+    .productsLoaded {
+      grid-column: 1;
+      grid-row: 1;
+    }
   }
 
   // pageWrapper
@@ -29,5 +41,40 @@
     align-items: center;
 
     padding: 20px;
+  }
+}
+
+.loading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 90vw;
+  height: 100vh;
+
+  scroll-behavior: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::webkit-scrollbar {
+    display: none;
+  }
+
+  .loadingBackground {
+    width: 100%;
+    height: 100%;
+
+    left: 0px;
+    background-color: rgba(255, 255, 255, 0.767);
+
+    .loadingWrapper {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 }
