--- a/src/UI/UIComponents/BODY/gallery/products/products.module.scss
+++ b/src/UI/UIComponents/BODY/gallery/products/products.module.scss
@@ -19,13 +19,6 @@
   }
 }
 
-.loading {
-  height: 80vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 // mappedProductsImages
 .productWrapper {
   display: flex;
